--- a/index.html
+++ b/index.html
@@ -528,6 +528,29 @@
 
     </div>
 
+     <div
+        class="card"
+        data-tilt
+        data-tilt-max="50"
+        data-tilt-speed="200"
+        data-tilt-perspective="700"
+        data-tilt-glare="true"
+        data-tilt-max-glare="0.8"
+        data-tilt-max="10"
+      >
+   <div class="content">
+          <h2>20</h2>
+          <!-- increment this number in your card -->
+          <h3>shravani mamidwar</h3>
+          <!-- Add your name -->
+     <p>EsEmm04</p>
+          <!-- Add your GitHub username -->
+          <a href="https://github.com/EsEmm04">GitHub</a>
+          <!-- Add your GitHub profile link -->
+          <a href="http://127.0.0.1:5500/git/index.html">Portfolio</a>
+          <!-- Add your Portfolio profile link -->
+        </div>
+      </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
